--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -618,7 +618,7 @@ Bildformat PNG (\enquote{Portable Network Graphics}) mit der Dateiendung \texttt
 
 Gibt an, wie das Speichern eines im Editor eingegebenen Prolog-Programms behandelt werden soll.
 
-\textbf{\texttt{SaveType.SAVE\_NEW}}\\
+\textbf{\texttt{SaveType.SAVE}}\\
 Speichert das Prolog-Programm unter bekanntem Namen und Dateipfad ab, die existierende Datei wird dabei überschrieben.
 
 \textbf{\texttt{SaveType.SAVE\_AS}}\\
